<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Comunicar Atualizado</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nome">Nome</string>
    <string name="button1_caption">Mostrar</string>
    <string name="button2_caption">Gravar</string>
    <string name="button3_caption">Enviar</string>
    <string name="title_activity_display_message">A enviar...</string>
    <string name="message">Mensagem a enviar</string>
    <string name="new_message">Nova Mensagem</string>
    <string name="text1_hint">Escreva aqui uma frase</string>
    <string name="button2_hint">Acrescentar frase ao ficheiro texto em cartão</string>
    <string name="button3_hint">Enviar versão atualizada do ficheiro texto para o servidor remoto</string>

</resources>